Parte G1 completa -O aplicativo salva o lançamento. -O aplicativo lista todos os lançamentos. -O aplicativo edita lançamentos. -O aplicativo deleta lançamentos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="lancamento">Lançamento</string>
     <string name="tipo">Tipo</string>
     <string name="dataDeCriacao">Data de criação</string>
+    <string name="deletar">Deletar</string>
 </resources>
