--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="tipo">Tipo</string>
     <string name="dataDeCriacao">Data de criação</string>
     <string name="deletar">Deletar</string>
+    <string name="emQuantasVezes">Em quantas vezes:  </string>
 </resources>
